add shirohelper for digest methods like md5 remove Base64Encoder from sun, replace with Base64 directly for reading sql scripts, ignore first line